--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
-    "jquery": "^3.3.1",
+    "less": "^3.0.2",
     "react": "latest",
     "react-bootstrap": "latest",
     "react-dom": "latest",
     "react-parallax": "^1.7.0",
     "react-router-dom": "^4.2.2",
+    "react-router-hash-link": "^1.2.0",
     "react-scripts": "latest"
   },
   "scripts": {
