--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
     "less": "^3.0.2",
     "react": "latest",
     "react-bootstrap": "latest",
