--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.18.2",
+    "color": "latest",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.5",
     "cors": "^2.8.4",
@@ -13,6 +14,7 @@
     "ejs": "^2.5.9",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "jsonwebtoken": "latest",
     "less": "^3.0.2",
     "mongoose": "^4.13.13",
     "morgan": "^1.6.1",
@@ -21,12 +23,16 @@
     "passport-local": "~1.0.0",
     "react": "latest",
     "react-bootstrap": "latest",
+    "react-cookie": "^2.2.0",
     "react-dom": "latest",
+    "react-infinite-scroller": "^1.1.4",
     "react-parallax": "^1.7.0",
+    "react-router": "latest",
     "react-router-dom": "^4.2.2",
     "react-router-hash-link": "^1.2.0",
     "react-scripts": "latest",
-    "serve-favicon": "^2.3.2"
+    "serve-favicon": "^2.3.2",
+    "universal-cookie": "latest"
   },
   "scripts": {
     "start-frontend": "react-scripts start",
